lox-tests/tests/method/refer_to_name.stderr
ERROR: Undefined variable name 'method'
 --> 3:11
  |
3 |     print method; // expect runtime error: Undefined variable 'method'.
  |           ^----^
